<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Average Fuel &amp; Speed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_average_fuel">Average Fuel Consumption Calculator</string>
    <string name="title_activity_results">Saved Results</string>
    <string name="title_activity_average_speed">Average Speed Calculator</string>
    <string name="title_activity_speedometer">Speedometer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="choose">What would you like to do?</string>
    <string name="fuelConsumption">Average Fuel Consumption Calculator</string>
    <string name="speedCalculator">Average Speed Calculator</string>
    <string name="speed">Speedometer</string>
    <string name="distance">Distance travelled:</string>
    <string name="fuel">Fuel consumed:</string>
    <string name="average">Average consumption:</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="show">Saved results</string>
    <string name="units">Units to use:</string>
    <string name="distanceUnit">Distance:</string>
    <string name="amount">Volume:</string>
    <string name="consumption">Consumption:</string>
    <string name="speedText">Speed:</string>
    <string name="restore">Restore defaults</string>
    <string name="version">Version:</string>
    <string name="empty">No saved results</string>
    <string name="speed_distance">Distance:</string>
    <string name="speed_time">Time:</string>
    <string name="speed_time_from">Start time:</string>
    <string name="speed_time_to">End time:</string>
    <string name="speed_time_hint">HH:mm</string>
    <string name="speed_time_unit">Hours:minutes</string>
    <string name="average_speed">Average speed:</string>
    <string name="speed_text">Your speed is:</string>
    <string name="search_satellites">Starting GPS</string>
    <string name="speed_error_permission_text">Open settings</string>
    <string name="speed_error_try_again_text">Try again</string>
    <string name="speed_night_mode_text">Night Mode</string>


    <string name="about">This app is for calculating average fuel consumption of vehicles. It can
        calculate l/100 km, km/l and mpg. For addition there is an average speed calculator, which
        uses time and distance travelled to calculate the average speed and a speedometer which uses
        GPS location to calculate speed. All calculations are rounded to two decimal places. You
        should not take the results as absolute truth since all devices have some tolerance for
        errors, meaning that car\'s odometer may not show accurate data, same goes with fuel pumps.
        And app can only make calculations based on their data. Speedometer may not work due to
        bad weather conditions, bad sattellite connection or show somewhat inaccurate reading because
        of those conditions. Please keep your eyes on the road while driving and stay safe.
    </string>

    <string name="settings">Settings</string>
    <string name="settings_text">Lets select which units to use for distance, amount, consumption
        and speed. If \"Restore defaults\" is clicked, default units are used for distance (km),
        amount (litres), consumption (l/100km) and speed (km/h).
    </string>

    <string name="afcc">Average Fuel Consumption Calculator</string>
    <string name="afcc_text">Allows to calculate average fuel consumption based on distance travelled
        and amount of fuel consumed. It uses units set in settings. \"Calculate\" button initializes
        the calculation, \"Save\" button saves result and \"Saved Results\" shows previously saved
        results.
    </string>

    <string name="previous_results">Saved Results</string>
    <string name="previous_results_text">Shows previously saved results as a list with date when the
        result was saved. When long-clicked on the list item, alert view appears to allow deletion of
        that result.
    </string>

    <string name="average_speed_calculator">Average Speed Calculator</string>
    <string name="average_speed_calculator_text">Calculates average speed based on distance and time
        taken. It uses distance unit set in settings. Start and end times are set using time pickers.
        \"Calculate\" button initializes the calculation of average speed.
    </string>

    <string name="speedometer_text">Shows current speed based on device\'s GPS data. Uses speed unit
        that was set in settings.
    </string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2267964394802376/3218938843</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-2267964394802376~1742205647</string>
    <string name="test_add_app_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="property_id" translatable="false">admob-app-id-1742205647</string>
    <string name="ga_trackingId" translatable="false">UA-68609113-1</string>

    <string name="err_no_ver_name">Did not get a version name</string>
    <string name="err_no_calc_type">Did not find calculation type</string>
    <string name="err_no_distance">Insert value to distance travelled box!</string>
    <string name="err_no_fuel">Insert value to fuel box!</string>
    <string name="err_wrong_vals">Wrong values used, try again!</string>
    <string name="err_empty">Nothing to save</string>
    <string name="err_no_permission">Can\'t get location updates, no permission granted</string>
    <string name="err_dis_less_zero">Distance has to be bigger than zero</string>
    <string name="err_no_start">Start time is not inserted</string>
    <string name="err_no_end">End time is not inserted</string>
    <string name="err_int_zero">There\'s nothing to calculate, time interval is zero</string>
    <string name="err_wrong_time">Time is in wrong format</string>
    <string name="err_no_permission2">Error occurred. Allow this app to get location updates under settings.</string>
    <string name="err_no_gps_provider">Error occurred. Device seems to not have a GPS.</string>
    <string name="err_npe">Error occurred</string>

    <string name="inf_change_save">Changes saved!</string>
    <string name="inf_def_rest">Defaults restored!</string>
    <string name="inf_saved">saved!</string>
    <string name="inf_deleted">Deleted</string>

    <string name="qst_delete">Delete?</string>
    <string name="ans_del">Yes</string>
    <string name="ans_cancel">No</string>

    <string name="val_km">km</string>
    <string name="val_m">m</string>
    <string name="val_l">l</string>
    <string name="val_g">g</string>

    <string name="val_set_km">Kilometers</string>
    <string name="val_set_m">Miles</string>
    <string name="val_set_l">Litres</string>
    <string name="val_set_g">Gallons</string>
    <string name="copyright">&#169; Taavi Kase</string>
</resources>
