<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kase.taavi.averagefuelconsumption.MainActivity" >

    <TextView
        android:id="@+id/chooseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/choose" />

    <Button
        android:id="@+id/fuelConsumptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chooseText"
        android:layout_marginTop="18dp"
        android:text="@string/fuelConsumption"
        android:onClick="onClick" />

    <Button
        android:id="@+id/speedCalculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fuelConsumptionButton"
        android:layout_alignRight="@+id/fuelConsumptionButton"
        android:layout_below="@+id/fuelConsumptionButton"
        android:text="@string/speedCalculator"
        android:onClick="onClick" />

    <Button
        android:id="@+id/speedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speedCalculatorButton"
        android:layout_alignRight="@+id/speedCalculatorButton"
        android:layout_below="@+id/speedCalculatorButton"
        android:text="@string/speed"
        android:onClick="onClick" />
</RelativeLayout>
